bk_ida/gccida/g1/qty_compare
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/qty_compare/src/local-alloc.c:2179:25: error: use of undeclared identifier 'qty_0'
v3 = ( int)( ( double)( qty_0[v2].size * qty_0[v2].freq * floor_log2_wide( qty_0[v2].n_refs)) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/qty_compare/src/local-alloc.c:2179:42: error: use of undeclared identifier 'qty_0'
v3 = ( int)( ( double)( qty_0[v2].size * qty_0[v2].freq * floor_log2_wide( qty_0[v2].n_refs)) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/qty_compare/src/local-alloc.c:2179:76: error: use of undeclared identifier 'qty_0'
v3 = ( int)( ( double)( qty_0[v2].size * qty_0[v2].freq * floor_log2_wide( qty_0[v2].n_refs)) 
                                                                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/qty_compare/src/local-alloc.c:2180:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v2].death - qty_0[v2].birth) 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/qty_compare/src/local-alloc.c:2180:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v2].death - qty_0[v2].birth) 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/qty_compare/src/local-alloc.c:2184:22: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v4].size * qty_0[v4].freq * floor_log2_wide( qty_0[v4].n_refs)) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/qty_compare/src/local-alloc.c:2184:39: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v4].size * qty_0[v4].freq * floor_log2_wide( qty_0[v4].n_refs)) 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/qty_compare/src/local-alloc.c:2184:73: error: use of undeclared identifier 'qty_0'
- ( int)( ( double)( qty_0[v4].size * qty_0[v4].freq * floor_log2_wide( qty_0[v4].n_refs)) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/qty_compare/src/local-alloc.c:2185:14: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v4].death - qty_0[v4].birth) 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/qty_compare/src/local-alloc.c:2185:32: error: use of undeclared identifier 'qty_0'
/ ( double)( qty_0[v4].death - qty_0[v4].birth) 
                               ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/qty_compare/src/obj/local-alloc.o] Error 1
